<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_music_library"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.musicplayer.MusicLibraryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This activity should have 4 sections: Songs, Playlists, Artists and Albums. This should be achieved using Fragments. Fetching and playing songs should be achieved using the MediaPlayer class. \n\nThe activity should be linked to the search, now playing, recents and shop activities."/>

    <Button
        android:id="@+id/search_button"
        style="@style/ButtonsStyle"
        android:text="@string/search"/>

    <Button
        android:id="@+id/now_playing_button"
        style="@style/ButtonsStyle"
        android:text="@string/now_playing"/>

    <Button
        android:id="@+id/recent_activity_button"
        style="@style/ButtonsStyle"
        android:text="@string/recent_activity"/>

    <Button
        android:id="@+id/shop_button"
        style="@style/ButtonsStyle"
        android:text="@string/shop"/>
</LinearLayout>
